--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mightymeld-tailwind-loginform",
+  "name": "mightymeld-tailwind-landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@mightymeld/runtime": "^0.1.43",
+    "@mightymeld/runtime": "latest",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
